[FIX] the dropwdown menu on desktop size is now behind the form

--- a/css/modal.css
+++ b/css/modal.css
@@ -95,7 +95,7 @@ p {
     padding: 2%;
     padding-bottom: 20px;
     background-color: #fff;
-    z-index: 50;
+    z-index: 1;
   }
   .topnav.responsive a {
     float: none;
@@ -120,6 +120,9 @@ p {
     position: fixed;
     width: 100%;
     margin: 0;
+  }
+  .main-navbar {
+    z-index: 2;
   }
   .hero-content {
     margin-top: 70px;
